--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+psycopg2==2.6.1
+twilio
 Werkzeug>=0.11.3
 wheel>=0.26.0
 WTForms==2.1
