--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 boto==2.39.0
-bs4
+beautifulsoup4==4.4.1
 click==6.3
 Flask==0.10.1
 Flask-WTF==0.12
 gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
+lxml==3.5.0
 MarkupSafe==0.23
 psycopg2==2.6.1
-twilio
+twilio==5.4.0
 Werkzeug>=0.11.3
 wheel>=0.26.0
 WTForms==2.1
