--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Jinja2==2.8
 lxml==3.5.0
 MarkupSafe==0.23
 psycopg2==2.6.1
-sendgrid==3.4.0
+sendgrid>=3.4.0
 stripe==1.41.1
 twilio==5.4.0
 Werkzeug>=0.11.3
