--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,12 @@ Flask-WTF==0.12
 gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
-lxml==3.5.0
+lxml==4.4.1
 MarkupSafe==0.23
-psycopg2==2.6.1
-sendgrid>=3.4.0
+psycopg2-binary==2.8.4
+sendgrid==3.4.0
 stripe==1.41.1
 twilio==6.4.1
-Werkzeug>=0.11.3
-wheel>=0.26.0
+Werkzeug==0.11.3
+wheel==0.26.0
 WTForms==2.1
